--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,11 @@ lerna-debug.log*
 .env.development
 .env.test
 .env.production
+.env.local
+.env.*
 
 # temp directory
 .temp
 .tmp
+.next/
+.claude/
